target-forecast/infra/api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-forecast-api
spec:
  replicas: 1
  selector:
    matchLabels:
      role: target-forecast-api
  template:
    metadata:
      labels:
        role: target-forecast-api
    spec:
      containers:
        - name: target-forecast-api
          image: paam0101/target-forecast-api:latest
          ports:
            - containerPort: 8082
