target-forecast/infra/api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-forecast-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8082
  selector:
    role: target-forecast-api
