target-forecast/infra/api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: target-forecast-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: target-forecast-api.spinachsoftware.com
      http:
        paths:
          - backend:
              service:
                name: target-forecast-api
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - target-forecast-api.spinachsoftware.com
      secretName: target-forecast-api.spinachsoftware.com
